--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body{
     background-image: url(imagem/bolo-de-cenoura.jpg);
+    background-attachment: fixed;
     
 }
 .bolo{
     height: 100%;
-    width:800px;
+    width:50%;
     background-color: white;
     margin:auto;
     padding: 20px;
